--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: haskell
 ghc: 7.8
+before_install:
+  - cabal install mueval
 script:
-  - cabal configure --enable-tests && cabal build
+  - cabal configure --enable-tests && cabal build && ./dist/build/spec/spec
