--- a/Lambdajudge.cabal
+++ b/Lambdajudge.cabal
@@ -1,29 +1,32 @@
 name: Lambdajudge
-version: 1.0.0.0
+version: 1.0.0.3
 cabal-version: >=1.10
 build-type: Simple
 license: MIT
 license-file: LICENSE
 maintainer: ankitkumar.itbhu@gmail.com, venu.gangireddy@gmail.com, safalpandita@gmail.com
 synopsis: A library to easily host Haskell based programming competitions
+description: A library to easily host Haskell based programming competitions
 category: Development
+homepage: http://venugangireddy.github.io/Lambdajudge/
 author: Ankit Kumar, Venugopal Reddy,  Safal Pandita
 bug-reports: https://github.com/venugangireddy/Lambdajudge/issues
 
 source-repository head
-  type:     github
+  type:     git
   location: https://github.com/venugangireddy/Lambdajudge
 
 library
     build-depends:
         base >=4.6 && < 5,
-        text >=1.2.0.3,
+        text >=1.2.0.3 && < 1.2.0.4,
         mtl -any,
         hspec >= 1.11,
         filepath >= 1.4.0.0,
-        process >= 1.2.3.0
+        process >= 1.2.3.0 && < 1.3.0.0
     default-language: Haskell2010
     hs-source-dirs: src
+    exposed-modules: Lambdajudge
 
 test-suite spec
   default-language: Haskell2010
